# mint

./: .gitignore  README.md  package.json  pyproject.toml
frontend/: .env.production  index.html  package.json  vite.config.ts
frontend/public/assets/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: AccountsDropdown.tsx  FileUploadBanner.tsx  LinkFieldCombobox.tsx  PartyTypeDropdown.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  calendar.tsx  command.tsx  dialog.tsx  empty.tsx  error-banner.tsx  file-dropzone.tsx  form-elements.tsx  hover-card.tsx  input-group.tsx  input.tsx  kbd.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  stats.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx  typography.tsx
frontend/src/hooks/: useCurrentCompany.ts  useDocType.ts  useFiscalYear.ts  usePaymentEntryCalculations.tsx
frontend/src/lib/: company.ts  currency.ts  frappe.ts  numbers.ts
frontend/src/lib/namespace/: defaults.js  index.js  sync.js
frontend/src/pages/: BankReconciliation.tsx  BankStatementImporter.tsx
frontend/src/types/Accounts/: AdvanceTaxesandCharges.ts  BankAccount.ts  BankTransaction.ts  BankTransactionPayments.ts  (+5 more)
mint/: hooks.py
mint/apis/: bank_account.py  bank_clearance.py  bank_reconciliation.py  google_ai.py  rules.py  statement_import.py  transactions.py
mint/locale/: ar.po  de.po  main.pot
mint/overrides/: bank_account.py
mint/setup/: install.py
mint/translations/: zh.csv
mint/www/: mint.py
translations/: zh.csv
(+74 files in other folders)
